Adjusted font size for diffeerent screen sizes. Hopefully fixed the text blurring into main pic on work computers.

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -125,6 +125,12 @@ header {
          0px 18px 23px rgba(0,0,0,0.1);
 }
 
+#inspire {
+  padding-top: 1vh;
+  font-size: 0.7em;
+  padding-bottom: 3vh;
+} 
+
 .aboutMe {
   font-family: 'Roboto';
   font-size: calc(1em + 0.8vw);
@@ -159,39 +165,41 @@ header {
   z-index:100;
 }
 
+#main {
+  font-size: 2em;
+  font-weight: bold;
+  /*margin-top: 8vh;*/
+}
+
 @media screen and (max-width: 65em) {
     #pic {
       float: none;
       padding: 0;
     }
 
+    .centralText {
+      padding-top: 15vh;
+    }
+
     #main {
-  padding-top: 3vh; 
-  text-align: center;
-  font-size: 1em;
-  font-weight: bold;
-  text-shadow: none;
+      padding-top: 3vh; 
+      text-align: center;
+      font-size: 2em;
+      font-weight: bold;
+      text-shadow: none;
   }
 
   #inspire {
-    font-size: 0.8em;
-    /*margin-top: 1vh; */
+    font-size: 1em;
     width: 75vw; 
     margin: auto;
     margin-bottom: 0;
   }
 
   #quote {
-  font-size: 0.8em;
-  margin-bottom: 7vh;
+  font-size: 1.3em;
+  margin-bottom: 5vh;
   }
-
-
-
-}
-
-@media screen and (max-width: 120em) {
-   
 }
 
 @media screen and (max-width: 40em) {
@@ -217,9 +225,9 @@ header {
   padding-top: 3vh; 
   width: 75vw;
   text-align: center;
-  font-size: 1em;
+  font-size: 2.3em;
   font-weight: bold;
-  margin-left: 40px;
+  margin-left: 20px;
   }
 
   #inspire {
@@ -246,11 +254,7 @@ header {
 
 }
 
-#main {
-  font-size: 2em;
-  font-weight: bold;
-  /*margin-top: 8vh;*/
-}
+
 
 #quote {
   margin-top: 5vh;
@@ -300,6 +304,3 @@ footer {
   color: black;
 }
 
-#inspire {
-  padding-top: 1vh;
-} 
